Fixed spacing on header.

--- a/components/Layout/Header/styles.module.scss
+++ b/components/Layout/Header/styles.module.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   column-gap: var(--spacing-300);
   row-gap: var(--spacing-400);
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 
   padding: var(--spacing-600) 0;
